--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -60,6 +60,7 @@
               <li><a href="/sysparms">系统参数修改</a></li>
               <li><a href="/queuelist">队列处理状况</a></li>
               <li><a href="/news/beaconlist">灯塔编辑</a></li> 
+              <li><a href="/grouplist">标签编辑</a></li> 
               <!--li><a href="/news/mybeacons">我的灯塔</a></li> 
               <li><a href="/news/beaconnews">灯塔阅读</a></li--> 
             </ul><a href="/usermodify/"><p class="navbar-text pull-right">{{user.username}}</a>&nbsp;&nbsp; <a href="/apply/logout">离开</a></p> 
