--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -52,12 +52,12 @@
           	<img class="img-rounded" src="/site_media/static/news/logo1x.png" alt="指极星"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
+              <li><a href="/sysparms">控制面板</a></li>
               <li><a href="/news/adm" title="用户信息">用户</a></li>
               <li><a href="/news/captchalist">邀请码</a></li>
               <li><a href="/news/adm/?otype=log">日志</a></li>
-              <li><a href="/news/feedbacks">反馈</a></li>
-              <li><a href="/news/search">搜索</a></li>
-              <li><a href="/sysparms">系统参数修改</a></li>
+              <!--li><a href="/news/feedbacks">反馈</a></li>
+              <li><a href="/news/search">搜索</a></li-->
               <li><a href="/queuelist">队列处理状况</a></li>
               <li><a href="/news/beaconlist">灯塔编辑</a></li> 
               <li><a href="/grouplist">标签编辑</a></li> 
