--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -52,7 +52,7 @@
           	<img class="img-rounded" src="/site_media/static/news/logo1x.png" alt="指极星"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="/sysparms">控制面板</a></li>
+              <li><a href="/sysparms">参数管理</a></li>
               <li><a href="/news/adm" title="用户信息">用户</a></li>
               <li><a href="/news/captchalist">邀请码</a></li>
               <li><a href="/news/adm/?otype=log">日志</a></li>
