--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -112,6 +112,7 @@
   var tag_unchk = new Array()
   var doc_unchk = new Array()
 
+  $('#beaconlist').attr('class', 'active');
   // $("#beacon_desc").keydown(function(event){ 
   //   if(event.keyCode==13 )
   //         window.location.href = '/news/savebeacon/?similarid={{similarid}}&beacon='+$(this).text() ;
