--- a/mybonds/templates/beacon/queue_list.html
+++ b/mybonds/templates/beacon/queue_list.html
@@ -158,3 +158,9 @@
   	</div> <!-- /container -->
 
   	{% endblock %} 
+
+{% block script %} 
+<script > 
+  $('#queuelist').attr('class', 'active');
+</script > 
+{% endblock %} 
