--- a/mybonds/templates/beacon/captcha.html
+++ b/mybonds/templates/beacon/captcha.html
@@ -66,6 +66,7 @@
 
 {% block script %} 
 <script >    
+  $('#captchalist').attr('class', 'active'); 
   $('.btn').click(function(){
     var cid= $(this).parent().parent().find("#captchaid").text();
     $(this).button('loading');
