remove sysparm REMOVE_KEYUPTIME and REMOVE_CNT,change sysparm from conster to active .

--- a/mybonds/templates/beacon/sysparms.html
+++ b/mybonds/templates/beacon/sysparms.html
@@ -50,7 +50,7 @@
                 <input type="text" id="beacon_interval" name="beacon_interval" placeholder="频道更新间隔时间(秒)" value="{{sysparmsobj.beacon_interval}}">
                 </div>
               </div>
-              <div class="control-group">
+              <!--div class="control-group">
                 <label class="control-label">频道更新间隔时间(秒)</label>
                 <div class="controls">  
                 <input type="text" id="beacon_interval_remove" name="beacon_interval_remove" placeholder="频道更新间隔时间-当有新闻从频道中移除(秒)" tabindex="2" value="{{sysparmsobj.beacon_interval_remove}}"><span class="help-inline">当有新闻从频道中移除</span>  
@@ -62,7 +62,7 @@
                 <input type="text" id="beacon_interval_remove_cnt" name="beacon_interval_remove_cnt" placeholder="频道更新间隔时间-当有新闻从频道中移除条数" tabindex="2" value="{{sysparmsobj.beacon_interval_remove_cnt}}">
                 <p class="help-block">当有新闻从频道中移除条数(移除数目)</p>
                 </div>
-              </div>
+              </div-->
               <div class="control-group">
                 <label class="control-label">频道从后台取新闻条数</label>
                 <div class="controls">  
