--- a/mybonds/templates/beacon/search_list.html
+++ b/mybonds/templates/beacon/search_list.html
@@ -11,7 +11,14 @@
       			<div class="span2">
       				<button class="btn" id="mybtn" data-loading-text="正在搜索...">搜索</button>
       			</div>
+
+            <div class="input-append span12" style="margin-left:0px;">
+              <input class="span9 search-query"  placeholder="搜索"  id="beaconsearch" type="text" value="">
+              <button class="btn btn-primary" id="search_btn" type="button" data-loading-text="搜索中">搜索</button>
+            </div> 
+
     		</div>
+
     		<div class="row-fluid">
       			<div class="span10" style="display"></div>
       			{% for doc in udata.docs %}
