modidfied beaconsave func add beacontime parm

--- a/mybonds/templates/beacon/beacon_list.html
+++ b/mybonds/templates/beacon/beacon_list.html
@@ -56,7 +56,8 @@
             <input id="beacon_id"  type="hidden" class="uneditable-input" placeholder="灯塔..." value="{{beaconid}}"> 
             <br>灯塔key<br><input type="text" readonly value="{{beaconusr}}:{{beaconid}}">
             <input id="beacon_key"  type="hidden" class="uneditable-input" placeholder="灯塔..." value="{{beaconusr}}:{{beaconid}}"> 
-            <br>所属用户<br><input id="beacon_usr"  type="text" class="" placeholder="灯塔所属用户" value="{{beaconusr}}"> 
+            <br>所属用户<br><input id="beacon_usr"  type="text" class="" placeholder="灯塔所属用户" value="{{beaconusr}}">  
+            <br>生成时间<br><input id="beacon_time"  type="text" class="" placeholder="灯塔生成时间" value="{{beacontime}}"> 
             <br>灯塔名称<br><input id="beacon_name"  type="text" class="" placeholder="灯塔名称..." value="{{beaconname}}"> 
             <br>灯塔显示名称<br><input id="beacon_displayname"  type="text" class="" placeholder="灯塔显示名称..." value="{{beacondisplayname}}">
             <br>新闻长度<br><input id="beacon_mindoc"  type="text" class="" placeholder="灯塔文章长度" value="{{beaconmindoc}}"> 
@@ -182,6 +183,7 @@
     beacon_key = $('#beacon_key').val();
     beacon_usr = $('#beacon_usr').val();
     beacon_name = $('#beacon_name').val();
+    beacon_time = $('#beacon_time').val().replace(/-/g,"").replace(/:/g,"");
     beacon_displayname = $('#beacon_displayname').val();
     beacon_desc = $('#beacon_desc').val();
     beacon_mindoc = $('#beacon_mindoc').val();
@@ -196,7 +198,7 @@
     }
 
     // alert('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr);
-    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
+    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconkey=&desc='+beacon_desc+'&beaconname='+beacon_name+'&beacontime='+beacon_time+'&beaconusr='+beacon_usr+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
     // $('#beacon_id').val("");
     // $('#beacon_name').val("");
     // $('#beacon_desc').val(""); 
@@ -206,6 +208,7 @@
     beacon_key = $('#beacon_key').val();
     beacon_id = $('#beacon_id').val();
     beacon_name = $('#beacon_name').val();
+    beacon_time = $('#beacon_time').val().replace(/-/g,"").replace(/:/g,"");
     beacon_displayname = $('#beacon_displayname').val();
     beacon_usr = $('#beacon_usr').val();
     beacon_desc = $('#beacon_desc').val();
@@ -221,7 +224,7 @@
     }
     
     // alert('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beaconkey='+beacon_key);
-    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beaconkey='+beacon_key+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
+    window.location.href = encodeURI('/news/beaconsave/?share=1&beaconid='+beacon_id+'&desc='+beacon_desc+'&beaconusr='+beacon_usr+'&beaconname='+beacon_name+'&beacontime='+beacon_time+'&beaconkey='+beacon_key+'&beaconmindoc='+beacon_mindoc+'&headlineonly='+headlineonly+'&beacondisplayname='+beacon_displayname+'&beacontag='+beacontag);
   });
 
 </script>
