modified beacon_news.html remove ori text

--- a/mybonds/templates/beacon/beacon_news.html
+++ b/mybonds/templates/beacon/beacon_news.html
@@ -118,7 +118,7 @@
              <p ><small>{{doc.domain}}&nbsp;  {{doc.create_time}}&nbsp; <span style="color:green"> {{doc.beaconttl}}&nbsp;  </span> 
              </small></p> 
               {{doc.text}}
-               <br><br>{{doc.tx}} <br>
+               <!--br><br>{{doc.tx}} <br-->
             </blockquote> 
             </div>
             {% endfor %}          
