--- a/mybonds/templates/beacon/admin.html
+++ b/mybonds/templates/beacon/admin.html
@@ -118,6 +118,7 @@
                   <th>最后访问时间</th>
                   <th>最后访问入口</th>
                   <th>最后访问内容</th>
+                  <!--th>操作</th-->
                 </tr>
               </thead>
               {% endif %}
@@ -129,6 +130,7 @@
                 <td>{{usr.act_tms}}</td>
                 <td>{{usr.act}}</td>
                 <td><a target="_blank" href="{{usr.url}}" title="{{usr.url}}">{{usr.o}}</a></td>
+                <!--td><a class="close" data-toggle="modal" href="#myModal"  style="float: none;" data-keyboard="true" data-backdrop="true" >x</a></td-->
 				   		</tr>
 							{% endfor %}
 				 			</tbody>
@@ -147,7 +149,21 @@
   			{{ user }}
   		</p-->
   		{% endfor %} 
-		
+<!-- Modal -->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">删除用户</h3>
+  </div>
+  <div class="modal-body">
+    <p>是否确认删除该用户?</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">取消</button>
+    <button id="delete_btn" class="btn btn-primary">确认</button>
+  </div>
+</div>
+
     </div> <!-- /container -->
 
 {% endblock %}
@@ -172,7 +188,7 @@
 {% else %}
   $('#userinfo').attr('class', 'active'); 
 {% endif %} 
-
+  
   $('#search_btn').click(function(){
     // if($('#beaconsearch').val()=="") return;
     $(this).button('loading');
