--- a/mybonds/templates/beacon/sysparms.html
+++ b/mybonds/templates/beacon/sysparms.html
@@ -2,22 +2,66 @@
 {% extends 'beacon/admin.html' %}     
 
 {% block content %} 
-    <div class="container"> 
-	<div class="row-fluid">
-  		<div class="span12">
-    		<!--div class="row-fluid">
-      			<div class="span10">
-				      <input id="search"  type="text" class="search-query span12" placeholder="搜索" value="{{query}}"> 
-  				  </div> 
-      			<div class="span2">
-      				<button class="btn" id="mybtn" data-loading-text="正在搜索...">搜索</button>
-      			</div>
-    		</div-->
-    		<div class="row-fluid">
-            <!--div class="span2" style="display:block"></div--> 
-            <div class="span8" > 
+<div class="container span12"> 
+	  <div class="row-fluid">
+
+      <div class="tabbable tabs-left span9"> <!-- Only required for left/right tabs -->
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#tab1" data-toggle="tab">模板参数信息</a></li>
+          <li><a href="#tab2" data-target='#tab2'  data-toggle="tab">系统参数信息</a></li>
+        </ul>
+
+        <div class="tab-content "> 
+
+          <div class="tab-pane active" id="tab1">
             <form class="well_wxi form-horizontal" method="post" action="/sysparms/" id="sysparms" style="padding-left:10px;"> 
               {% csrf_token %} 
+              <input id="parmtype" name="parmtype" type="hidden" class="uneditable-input" value="template"> 
+              <fieldset>
+              <div class="control-group">
+                <legend>模板参数信息修改</legend>
+                <label class="control-label" for="fontsize">字体大小</label>
+                <div class="controls">  
+                <input type="text" id="fontsize" name="fontsize" placeholder="50px" value="{{tempparmsobj.fontsize}}">
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="fontcolor">字体颜色</label>
+                <div class="controls">  
+                <input type="text" id="fontcolor" name="fontcolor" placeholder="red"  value="{{tempparmsobj.fontcolor}}" >
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="fontfamily">字体类型</label>
+                <div class="controls">  
+                <input type="text" id="fontfamily" name="fontfamily" placeholder=' "Arial Hebrew","Microsoft Yahei" 'value="{{tempparmsobj.fontfamily}}" >
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="bkcolor">背景色</label>
+                <div class="controls">  
+                <input type="text" id="bkcolor" name="bkcolor" placeholder="#f5f5f5"  value="{{tempparmsobj.bkcolor}}" ></p>
+                </div>
+              </div>
+              <div class="control-group">
+                <label class="control-label" for="padding">间距</label>
+                <div class="controls">  
+                <input type="text" id="padding" name="padding" placeholder="0px 9px 6px 9px"  value="{{tempparmsobj.padding}}" > 依次定义:上 右 下 左 的边距</p>
+                </div>
+              </div>
+              <div class="control-group">
+                <span class="help-block"> </span>
+                <label class="control-label"> </label>
+                <button type="submit" class="btn">保存</button>
+              </div>
+              </fieldset>
+            </form>
+          </div>
+
+          <div class="tab-pane " id="tab2"> 
+            <form class="well_wxi form-horizontal" method="post" action="/sysparms/" id="sysparms" style="padding-left:10px;"> 
+              {% csrf_token %} 
+              <input id="parmtype" name="parmtype" type="hidden" class="uneditable-input" value="system"> 
               <fieldset>
               <div class="control-group">
                 <legend>系统参数信息修改</legend>
@@ -49,20 +93,7 @@
                 <div class="controls">  
                 <input type="text" id="beacon_interval" name="beacon_interval" placeholder="频道更新间隔时间(秒)" value="{{sysparmsobj.beacon_interval}}">
                 </div>
-              </div>
-              <!--div class="control-group">
-                <label class="control-label">频道更新间隔时间(秒)</label>
-                <div class="controls">  
-                <input type="text" id="beacon_interval_remove" name="beacon_interval_remove" placeholder="频道更新间隔时间-当有新闻从频道中移除(秒)" tabindex="2" value="{{sysparmsobj.beacon_interval_remove}}"><span class="help-inline">当有新闻从频道中移除</span>  
-                </div>
-              </div>
-              <div class="control-group">
-                <label class="control-label">频道更新间隔时间</label>
-                <div class="controls">  
-                <input type="text" id="beacon_interval_remove_cnt" name="beacon_interval_remove_cnt" placeholder="频道更新间隔时间-当有新闻从频道中移除条数" tabindex="2" value="{{sysparmsobj.beacon_interval_remove_cnt}}">
-                <p class="help-block">当有新闻从频道中移除条数(移除数目)</p>
-                </div>
-              </div-->
+              </div> 
               <div class="control-group">
                 <label class="control-label">频道从后台取新闻条数</label>
                 <div class="controls">  
@@ -100,49 +131,26 @@
               </div>
               </fieldset>
             </form>
-            </div>
-            <div class="span4">
-              <div class="alert" id="alert-message" style="display:block;">
-                <a class="close" data-dismiss="alert">×</a>
-                <strong>提示:</strong> {% if err_message %}<br>{{err_message}} {% else %}
-                <br>各个栏位请填入数字<br>!{% endif %}
-              </div>
+          </div>
 
-              <!--div id="beacon-container" class="beacon-container row span12" >
-              {% for beacon in beacons %}
-                <div class="tag-item span12" style="margin-left:0px;">  
-                  <span id='info' class="label label-info">{{beacon.name}}</span><a class='close' data-dismiss='tag-item' style="float: none;">×</a>
-                </div>  
-              {% endfor %}
-              </div>
+        </div>  
+      </div> <!-- tabbable-->
+        <div class="span3">
+          <div class="alert" id="alert-message" style="display:block;">
+            <a class="close" data-dismiss="alert">×</a>
+            <strong>提示:</strong> {% if err_message %}<br>{{err_message}} {% else %}
+            <br> <br>!{% endif %}
+          </div> 
+        </div>
 
-              <section id="beacon-box">
-                <div class="input-append" id="beacon-box">
-                  <input class="span12" id="beacon_txt" type="text" placeholder="增加联系人邮件">
-                  <button id="add_btn" class="btn" type="button">添加邮件</button>
-                  <button id="save_btn" class="btn" type="button" >保存邮件</button>
-                </div>
-              </section--> 
+    </div> <!-- /row-fluid -->
 
-            </div>
-
-    		</div>
-  		</div>
-	</div> 
-
-
-  		{% for user in user_list %}
-  		<!--p>
-  			{{ user }}
-  		</p-->
-  		{% endfor %} 
-		
-    </div> <!-- /container -->
+</div> <!-- /container -->
 
 {% endblock %} 
 {% block script %} 
 <script >
-  $('#sysparms').attr('class', 'active');
+  // $('#sysparms').attr('class', 'active');
   
   $("#beacon_txt").keydown(function(event){ 
     if(event.keyCode==13 )
@@ -157,7 +165,7 @@
           // $(this).attr('class', 'label label-info');
         }else{
           // alert($(this).hasClass('label label-info')+$(this).text());
-          $(this).attr('class', 'label label-success'); 
+          $(this).attr('class', 'label label-success');
           // alert('/news/listsimilar/?similarid={{similarid}}&beacon='+$(this).text()+'&title={{title}}');
           window.location.href = '/news/listsimilar/?similarid={{similarid}}&beacon='+$(this).text() ;
         }
